Form Section Created

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <section id="video">
         <section id="video-center">
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/9o7g4eAl0Bk" title="MEU OMEN virou um DUELISTA nesse GAME!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/eISeERPgmZ4" title="The Last Island! | One Piece" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div id="text">
                 <h2>Aprenda com especialistas e<br>comece seu primeiro projeto</h2>
                 <p>Conheça o processo de desenvolvimento e entenda como utilizar<br>os principais métodos e ferramentas da área para resolver<br>problemas complexos.<br><br>Conquiste seu certificado e desenvolva um projeto prático para<br> aplicar seus conhecimentos.</p>
@@ -73,6 +73,17 @@
                 <div class="circle" onclick="goLeft()"></div>
                 <div class="circle notInPage" onclick="goRight()"></div>
             </div>
+    </section>
+
+    <section id="form-section">
+        <h2>Comece agora mesmo e dê o primeiro passo da sua carreira</h2>
+        <form action="https://api.sheetmonkey.io/form/x1oqeMYhLamGPcrpoCNeiK" method="post" class="default-form">
+            <input type="text" placeholder="Nome" name="Name" >
+            <input type="text" placeholder="Email" name="Email" >
+            <input type="number" placeholder="Telefone" name="Phone" inputmode="numeric" id="phone-number">
+            <input type="hidden" name="Created at" value="x-sheetmonkey-current-date-time" />
+            <input type="submit" value="Acesse a ementa grátis"></input>
+        </form>
     </section>
     <script src="https://kit.fontawesome.com/1c1371ef50.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
