Added Required to input fields

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <section id="form-section">
         <h2>Comece agora mesmo e dê o primeiro passo da sua carreira</h2>
         <form action="https://api.sheetmonkey.io/form/x1oqeMYhLamGPcrpoCNeiK" method="post" class="default-form">
-            <input type="text" placeholder="Nome" name="Name" >
-            <input type="text" placeholder="Email" name="Email" >
+            <input type="text" placeholder="Nome" name="Name" required>
+            <input type="text" placeholder="Email" name="Email" required>
             <input type="number" placeholder="Telefone" name="Phone" inputmode="numeric" id="phone-number">
             <input type="hidden" name="Created at" value="x-sheetmonkey-current-date-time" />
             <input type="submit" value="Acesse a ementa grátis"></input>
