--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
                 <i id="left-arrow" class="fa-solid fa-angle-left fa-2xl offline" onclick="goLeft()"></i>
 
                 <div class="card ">
-                    <img src="https://i.pinimg.com/736x/17/71/d9/1771d94f7218e588422eafec8f78267e.jpg" alt="adsda">
+                    <img src="https://i.pinimg.com/736x/17/71/d9/1771d94f7218e588422eafec8f78267e.jpg" alt="Nami picture">
                     <p>“O curso da DNC School foi o ponto de partida da minha transição de carreira.Hoje já consegui minha primeira vaga na área!”
                         <span>Bruna, desenvolvedora Front-End</span></p>
                 </div>
 
                 <div class="card">
-                    <img src="https://pm1.aminoapps.com/7920/b7ff846b9523ae39aaad26e6291ab71af4e0f3f1v2_00.jpg" alt="adsda">
+                    <img src="https://pm1.aminoapps.com/7920/b7ff846b9523ae39aaad26e6291ab71af4e0f3f1v2_00.jpg" alt="Sanji Picture">
                     <p>“Gostei muito da metodologia e da plataforma da Escola DNC. Os materiais são todos muito bons”
                         <span>Leonardo, desenvolvedor Back-End</span></p>
                 </div>
 
                 <div class="card invisible">
-                    <img src="https://i.pinimg.com/1200x/d0/5c/a3/d05ca36aa2f2541f04e9bf6a34e54ac1.jpg" alt="adsda">
+                    <img src="https://i.pinimg.com/1200x/d0/5c/a3/d05ca36aa2f2541f04e9bf6a34e54ac1.jpg" alt="Bonney Picture">
                     <p>“O curso da foi a mudança que eu precisava para alcançar meus objetivos profissionais”
                         <span>Samantha, desenvolvedora Front-End</span></p>
                 </div>
